# pine-rs

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  START_AUTONOMOUS.md  bootstrap.sh  debug_ast.rs
.claude/agents/: phase-driver.md  reviewer.md  tester.md
.claude/commands/: next-task.md  run-tests.md
.cursor/rules/: pine-rs-agent.mdc
.kiro/specs/multi-pane-display-fix/: .config.kiro  bug_exploration_results.md  bugfix.md  design.md  tasks.md
.pine-rs-state/: completed_tasks.json  current_task.txt
crates/pine-builtin-macro/: Cargo.toml
crates/pine-builtin-macro/src/: lib.rs
crates/pine-cli/: Cargo.toml
crates/pine-cli/src/: main.rs
crates/pine-eval/: Cargo.toml
crates/pine-eval/benches/: parallel_bench.rs
crates/pine-eval/src/: eval_expr.rs  eval_stmt.rs  fn_call.rs  lib.rs  parallel.rs  runner.rs
crates/pine-eval/tests/: performance_test.rs
crates/pine-lexer/: Cargo.toml
crates/pine-lexer/src/: lib.rs  token.rs
crates/pine-output/: Cargo.toml
crates/pine-output/src/: drawing.rs  lib.rs  plot.rs  strategy.rs
crates/pine-parser/: Cargo.toml
crates/pine-parser/src/: ast.rs  error.rs  expr.rs  lib.rs  parser.rs  stmt.rs
crates/pine-runtime/: Cargo.toml
crates/pine-runtime/benches/: series_bench.rs
crates/pine-runtime/src/: config.rs  context.rs  lib.rs  module.rs  na_ops.rs  series.rs  value.rs
crates/pine-sema/: Cargo.toml
crates/pine-sema/src/: infer.rs  lib.rs  scope.rs  types.rs
crates/pine-stdlib/: Cargo.toml
crates/pine-stdlib/src/: array.rs  color.rs  input.rs  lib.rs  map.rs  math.rs  plot.rs  registry.rs  str.rs  strategy.rs  ta.rs
crates/pine-vm/: Cargo.toml
crates/pine-vm/src/: ast_compiler.rs  compiler.rs  debug.rs  executor.rs  lib.rs  opcode.rs  vm.rs
crates/pine-vm/tests/: ast_compile_test.rs  vm_eval_parity.rs  vm_executor_test.rs  vm_golden_test.rs  vm_script_parity.rs
crates/pine-wasm/: Cargo.toml
crates/pine-wasm/src/: lib.rs  wasm_bridge.rs
crates/pine-wasm/tests/: wasm_parity_test.rs
docs/: API_COVERAGE.md  BUILTIN_GAP_REPORT.md  EXECUTION_BOUNDARY.md  FUNCTION_COVERAGE.json  FUNCTION_COVERAGE.md  GAP_ANALYSIS.md  GUIDE.md  REFERENCE_THREE_PROJECTS.md  V6_ALIGNMENT.md  VM_EVAL_PARITY.md  WS_SCHEMA.md
docs/api-coverage/: README.md  array.md  barstate.md  box.md  builtin.md  chart.md  color.md  constants-audit.md  input.md  label.md  line.md  linefill.md  log.md  map.md  math.md  matrix.md  others.md  plots.md  polyline.md  request.md  runtime.md  session.md  str.md  strategy.md  syminfo.md  ta.md  table.md  ticker.md  timeframe.md  types.md
docs/api-coverage/pinescript-v6/: array.json  barstate.json  input.json  log.json  map.json  math.json  request.json  session.json  str.json  strategy.json  syminfo.json  ta.json  ticker.json  types.json
docs/schema/: output.json
examples/: debug_ast.rs
pine-tv/: Cargo.toml
pine-tv/src/: lib.rs  main.rs
pine-tv/src/data/: binance.rs  binance_ws.rs  loader.rs  mod.rs  realtime.rs
pine-tv/src/engine/: mod.rs  output.rs  realtime_runner.rs  runner.rs
pine-tv/src/routes/: check.rs  data.rs  examples.rs  mod.rs  run.rs  ws.rs
pine-tv/static/: app.js  chart.js  editor.js  index.html
pine-tv/static/examples/: ema_triple.pine  rsi.pine  sma.pine
pine-tv/static/examples/array/: array_manipulation.pine  basic_array.pine
pine-tv/static/examples/color/: color_operations.pine
pine-tv/static/examples/control/: for_loop.pine  if_else.pine  switch_case.pine  var_varip.pine  while_loop.pine
pine-tv/static/examples/input/: inputs_demo.pine
pine-tv/static/examples/map/: basic_map.pine
pine-tv/static/examples/math/: basic_math.pine  log_exp.pine  rolling.pine  rounding.pine  sign.pine  trigonometry.pine
pine-tv/static/examples/str/: string_operations.pine
pine-tv/static/examples/strategy/: basic_strategy.pine  bollinger_reversion.pine  rsi_strategy.pine
pine-tv/static/examples/ta/: atr.pine  bbands.pine  crossover.pine  ema.pine  highest_lowest.pine  macd.pine  momentum.pine  rsi.pine  sma.pine  stoch.pine
pine-tv/static/examples/udf/: basic_udf.pine  udf_series.pine
pine-tv/tests/: CHECKPOINT_TASK4_RESULTS.md  PRESERVATION_TEST_RESULTS.md  README.md  api_integration_test.rs  manual_bug_verification.md  multi_pane_api_test.rs  multi_pane_bug_exploration.test.js  multi_pane_preservation.test.js  multi_pane_preservation_api_test.rs  package-lock.json  package.json
scripts/: annotate_api_coverage_pinets.py  compare_compat_expect.py  dev_verify.sh  report_builtin_gap.py  run_compat_smoke.sh
tests/: compare_golden.py  compare_strategy.py  phase_acceptance.sh  run_golden.sh  vm_parity_cases.json  vm_run_golden.sh
tests/compatibility/: README.md  run_pinets_abs_compare.sh
tests/compatibility/cases/: pinets_math_abs.pine
tests/compatibility/data/: BTCUSDC_1d_pinets_abs_window.csv
tests/compatibility/expect/: plot_close.expect.json
tests/data/: BTCUSDT_1h.csv  mini_BTCUSDT_1h.csv  sample.csv  strategy_crossover.csv
tests/golden/: atr_14.csv  bbands_20_2.csv  bbw_20_2.csv  cci_20.csv  change_2.csv  conditional_ternary.csv  correlation_10.csv  cross_events.csv  cum_volume.csv  dev_10.csv  dmi_5_5.csv  else_if.csv  else_if_only.csv  ema_12.csv  for_loop_variants.csv  for_na_math.csv  highest_10.csv  highestbars_10.csv  issue-for-inclusive.csv  linreg_10.csv  lowest_10.csv  lowestbars_10.csv  macd_12_26_9.csv  math_ops.csv  median_10.csv  mfi_14.csv  mom_10.csv  multi_output.csv  na_handling.csv  nested_loop.csv  obv_basic.csv  percentrank_10.csv  pvt_basic.csv  range_10.csv  rising_falling.csv  rma_14.csv  roc_10.csv  rsi_14.csv  series_access.csv  sma_14.csv  (+28 more)
tests/scripts/: debug_float_literal.pine  debug_order2.pine  debug_order3.pine
tests/scripts/basic/: hello.pine
tests/scripts/language/: array_index.pine  conditional_ternary.pine  else_if.pine  else_if_only.pine  for_in_basic.pine  for_in_series.pine  for_loop_variants.pine  for_na_math.pine  math_ops.pine  multi_output.pine  na_handling.pine  nested_loop.pine  series_access.pine  switch_basic.pine  switch_guard.pine  switch_series_golden.pine  ta_default_params.pine  (+9 more)
(+92 files in other folders)
