[package]
name = "pine-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pine"
path = "src/main.rs"

[dependencies]
pine-lexer = { path = "../pine-lexer" }
pine-parser = { path = "../pine-parser" }
pine-sema = { path = "../pine-sema" }
pine-eval = { path = "../pine-eval" }
pine-vm = { path = "../pine-vm" }
pine-runtime = { path = "../pine-runtime" }
pine-stdlib = { path = "../pine-stdlib" }
pine-output = { path = "../pine-output" }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
csv = "1.3"
chrono = "0.4"
