[package]
name = "pine-eval"
version = "0.1.0"
edition = "2021"
autotests = false

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
pine-lexer = { path = "../pine-lexer" }
pine-parser = { path = "../pine-parser" }
pine-sema = { path = "../pine-sema" }
pine-runtime = { path = "../pine-runtime" }
pine-stdlib = { path = "../pine-stdlib" }
pine-output = { path = "../pine-output" }
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true, optional = true }
indexmap = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "parallel_bench"
harness = false
required-features = ["parallel"]

[[test]]
name = "performance_test"
path = "tests/performance_test.rs"
required-features = ["parallel"]
