[package]
name = "pine-output"
version = "0.1.0"
edition = "2021"

[dependencies]
pine-runtime = { path = "../pine-runtime" }
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
insta = { workspace = true }
