[package]
name = "pine-stdlib"
version = "0.1.0"
edition = "2021"

[dependencies]
pine-runtime = { path = "../pine-runtime" }
indexmap = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
