[package]
name = "pine-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
pine-runtime = { path = "../pine-runtime" }
pine-stdlib = { path = "../pine-stdlib" }
pine-parser = { path = "../pine-parser" }
smallvec = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
pine-eval = { path = "../pine-eval" }
pine-lexer = { path = "../pine-lexer" }
serde_json = { workspace = true }
