[package]
name = "pine-wasm"
version = "0.1.0"
edition = "2021"
description = "Thin wasm-bindgen bridge over pine-eval (check + run)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pine-eval = { path = "../pine-eval", default-features = false }
pine-lexer = { path = "../pine-lexer" }
pine-parser = { path = "../pine-parser" }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
